tests/specs/ecosystem/thesgj/nextjs_toploader/1_6_6_canary.test
thesgj/nextjs-toploader/1.6.6-canary
-- deno.lock --

===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /src/index.tsx:86:7
   | 
86 | const NextTopLoader = ({
   |       ^^^^^^^^^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


